[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scenes/minigame/walls.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/minigame/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/minigame/Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/minigame/Switch.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/scripts/MiniGame_Script/Level1.gd" type="Script" id=5]
[ext_resource path="res://Scenes/minigame/images_Minigame/stone.png" type="Texture" id=6]
[ext_resource path="res://Scenes/minigame/MobileJoystick.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/scripts/MiniGame_Script/HUD.gd" type="Script" id=8]
[ext_resource path="res://fonts/monkeyFont.tres" type="DynamicFont" id=9]
[ext_resource path="res://Scenes/minigame/ban.tscn" type="PackedScene" id=10]
[ext_resource path="res://Images/background.webp" type="Texture" id=11]
[ext_resource path="res://Images/cog.png" type="Texture" id=12]
[ext_resource path="res://Scenes/scripts/Settingsmenu.gd" type="Script" id=13]
[ext_resource path="res://Scenes/scripts/MiniGame_Script/quitButton.gd" type="Script" id=14]
[ext_resource path="res://Images/1413908.png" type="Texture" id=15]
[ext_resource path="res://foodImg/Apple (1).png" type="Texture" id=16]
[ext_resource path="res://foodImg/mango (1).png" type="Texture" id=17]
[ext_resource path="res://foodImg/Orange (1).png" type="Texture" id=18]
[ext_resource path="res://foodImg/EnhancerG.png" type="Texture" id=19]
[ext_resource path="res://foodImg/EnhancerB.png" type="Texture" id=20]
[ext_resource path="res://foodImg/EnhancerY.png" type="Texture" id=21]
[ext_resource path="res://foodImg/EnhancerR.png" type="Texture" id=22]
[ext_resource path="res://foodImg/EnhancerP.png" type="Texture" id=23]
[ext_resource path="res://foodImg/Banana.png" type="Texture" id=24]
[ext_resource path="res://chibImage/Chib.png" type="Texture" id=25]
[ext_resource path="res://fonts/monkeyFont2.tres" type="DynamicFont" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5, 31.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 927, 417 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "SlideUp"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 927, 417 ), Vector2( 927, 353 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.294118 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Level1" type="Node2D"]
position = Vector2( -2, 0 )
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 538, 1338.45 )
scale = Vector2( 3.249, 4.468 )
texture = ExtResource( 11 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 1762.0
margin_right = 1076.0
margin_bottom = 1914.0

[node name="TileMap" type="TileMap" parent="HBoxContainer2"]
position = Vector2( -3, -1762 )
mode = 2
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393218, 0, 0, 458754, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458764, 0, 0, 458766, 0, 0, 524290, 0, 0, 524298, 0, 0, 524300, 0, 0, 524302, 0, 0, 589826, 0, 0, 589834, 0, 0, 589836, 0, 0, 589838, 0, 0, 655362, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655370, 0, 0, 655372, 0, 0, 655374, 0, 0, 720898, 0, 0, 720900, 0, 0, 720904, 0, 0, 720906, 0, 0, 720908, 0, 0, 720910, 0, 0, 786434, 0, 0, 786436, 0, 0, 786438, 0, 0, 786440, 0, 0, 786442, 0, 0, 786444, 0, 0, 786446, 0, 0, 851970, 0, 0, 851972, 0, 0, 851974, 0, 0, 851976, 0, 0, 851978, 0, 0, 851980, 0, 0, 851982, 0, 0, 917506, 0, 0, 917508, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917514, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 983042, 0, 0, 983044, 0, 0, 983050, 0, 0, 983054, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0 )

[node name="Door" type="StaticBody2D" parent="."]
position = Vector2( 927, 417 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Door"]
modulate = Color( 0.282353, 0.2, 0.2, 1 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Door"]
anims/RESET = SubResource( 2 )
anims/SlideUp = SubResource( 3 )

[node name="Area2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 1023, 415 )

[node name="Switch" parent="." instance=ExtResource( 4 )]
position = Vector2( 845, 1010 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 232, 978 )
scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_group_": true
}

[node name="Coin" parent="." instance=ExtResource( 3 )]
position = Vector2( 868, 848 )

[node name="Coin2" parent="." instance=ExtResource( 3 )]
position = Vector2( 229, 548 )

[node name="Coin3" parent="." instance=ExtResource( 3 )]
position = Vector2( 483, 851 )

[node name="CanvasLayer" parent="." instance=ExtResource( 7 )]

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Settingspopup" type="PopupPanel" parent="UI"]
anchor_left = 0.5
anchor_top = 0.46
anchor_right = 0.5
anchor_bottom = 0.46
margin_left = -410.0
margin_top = -801.2
margin_right = -351.0
margin_bottom = -613.2
rect_scale = Vector2( 14.2704, 7.4162 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settingspopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -90.0
margin_right = 25.5
margin_bottom = 90.0
custom_constants/separation = 10

[node name="saveButton" type="Button" parent="UI/Settingspopup/VBoxContainer"]
margin_right = 51.0
margin_bottom = 20.0
text = "SAVE"

[node name="backButton" type="Button" parent="UI/Settingspopup/VBoxContainer"]
margin_top = 30.0
margin_right = 51.0
margin_bottom = 50.0
text = "BACK"
script = ExtResource( 13 )

[node name="quitButton" type="Button" parent="UI/Settingspopup/VBoxContainer"]
margin_top = 60.0
margin_right = 51.0
margin_bottom = 80.0
text = "QUIT"
script = ExtResource( 14 )

[node name="SFXLbl" type="Label" parent="UI/Settingspopup/VBoxContainer"]
margin_top = 90.0
margin_right = 51.0
margin_bottom = 104.0
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="UI/Settingspopup/VBoxContainer"]
margin_top = 114.0
margin_right = 51.0
margin_bottom = 130.0
min_value = -30.0
max_value = 0.0

[node name="musicLbl" type="Label" parent="UI/Settingspopup/VBoxContainer"]
margin_top = 140.0
margin_right = 51.0
margin_bottom = 154.0
text = "MUSIC"
align = 1
valign = 1

[node name="MusicSlider" type="HSlider" parent="UI/Settingspopup/VBoxContainer"]
margin_top = 164.0
margin_right = 51.0
margin_bottom = 180.0
min_value = -30.0
max_value = 0.0

[node name="HUD" type="Control" parent="UI"]
margin_left = 154.0
margin_top = 345.0
margin_right = 256.0
margin_bottom = 404.0
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="UI/HUD"]
margin_top = -1.0
margin_right = 116.0
margin_bottom = 58.0
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="UI/HUD"]
margin_left = 5.0
margin_top = 17.0
margin_right = 70.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 9 )
text = "SCORE:"

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -535.5
margin_top = -152.0
margin_right = 535.5

[node name="gamesBTN" type="Button" parent="UI/HBoxContainer"]
margin_right = 533.0
margin_bottom = 152.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "Mini-Games"

[node name="graveBTN" type="Button" parent="UI/HBoxContainer"]
margin_left = 537.0
margin_right = 1071.0
margin_bottom = 152.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "Grave yard"

[node name="Label" type="Label" parent="UI"]
margin_left = 443.0
margin_top = 283.0
margin_right = 600.0
margin_bottom = 305.0
custom_fonts/font = ExtResource( 9 )
text = "Chib Search - Level 1"

[node name="shopBTN" type="Button" parent="UI"]
anchor_left = 0.09
anchor_top = 0.051
anchor_right = 0.09
anchor_bottom = 0.051
margin_left = -79.2
margin_top = -83.92
margin_right = 7.8
margin_bottom = 2.08
icon = ExtResource( 15 )
flat = true
expand_icon = true

[node name="settingsBTN" type="Button" parent="UI"]
anchor_left = 0.903
anchor_top = 0.056
anchor_right = 0.903
anchor_bottom = 0.056
margin_left = -0.240051
margin_top = -88.52
margin_right = 87.7599
margin_bottom = 0.479996
icon = ExtResource( 12 )
flat = true
expand_icon = true

[node name="EndPopUp" type="PopupPanel" parent="UI"]
anchor_left = 0.5
anchor_top = 0.46
anchor_right = 0.5
anchor_bottom = 0.46
margin_left = 139.0
margin_top = 84.0
margin_right = 197.0
margin_bottom = 272.0
rect_scale = Vector2( 14.2704, 7.4162 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/EndPopUp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -90.0
margin_right = 25.0
margin_bottom = 90.0
custom_constants/separation = 10

[node name="backButton" type="Button" parent="UI/EndPopUp/VBoxContainer"]
margin_right = 50.0
margin_bottom = 20.0
text = "BACK"
script = ExtResource( 13 )

[node name="quitButton" type="Button" parent="UI/EndPopUp/VBoxContainer"]
margin_top = 30.0
margin_right = 50.0
margin_bottom = 50.0
text = "QUIT"
script = ExtResource( 14 )

[node name="Label" type="Label" parent="UI/EndPopUp"]
margin_left = 4.0
margin_top = 4.0
margin_right = 54.0
margin_bottom = 184.0
text = "You  
lost. ;)"

[node name="shopPopUP" type="PopupPanel" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -516.0
margin_top = -533.0
margin_right = 516.0
margin_bottom = 533.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/shopPopUP"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/shopPopUP/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 1058.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="shopLBL" type="Label" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 26 )
text = "Welcome to the shop"
align = 1

[node name="premiumLBL" type="Label" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 26 )
text = "Premium store"
align = 1

[node name="yBooster" type="Button" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 1024.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 26 )
text = "Yellow booster - 60 coins"
icon = ExtResource( 21 )
expand_icon = true

[node name="bBooster" type="Button" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 1024.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 26 )
text = "Blue booster - 20 coins"
icon = ExtResource( 20 )
expand_icon = true

[node name="gBooster" type="Button" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 1024.0
margin_bottom = 254.0
custom_fonts/font = ExtResource( 26 )
text = "Green booster- 33 coins"
icon = ExtResource( 19 )
expand_icon = true

[node name="rBooster" type="Button" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 1024.0
margin_bottom = 308.0
custom_fonts/font = ExtResource( 26 )
text = "red booster - 100 coins"
icon = ExtResource( 22 )
expand_icon = true

[node name="pBooster" type="Button" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 1024.0
margin_bottom = 362.0
custom_fonts/font = ExtResource( 26 )
text = "Purple Booster - 40"
icon = ExtResource( 23 )
expand_icon = true

[node name="basicLBL" type="Label" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 1024.0
margin_bottom = 410.0
custom_fonts/font = ExtResource( 26 )
text = "Basic store"
align = 1

[node name="apple" type="Button" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 414.0
margin_right = 1024.0
margin_bottom = 464.0
custom_fonts/font = ExtResource( 26 )
text = "Apple -  20 coins"
icon = ExtResource( 16 )
expand_icon = true

[node name="bananna" type="Button" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 468.0
margin_right = 1024.0
margin_bottom = 518.0
custom_fonts/font = ExtResource( 26 )
text = "Banana - 15 coins"
icon = ExtResource( 24 )
expand_icon = true

[node name="mango" type="Button" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 522.0
margin_right = 1024.0
margin_bottom = 572.0
custom_fonts/font = ExtResource( 26 )
text = "Mango - 30 coin"
icon = ExtResource( 17 )
expand_icon = true

[node name="orange" type="Button" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 626.0
custom_fonts/font = ExtResource( 26 )
text = "Orange - 70 coin"
icon = ExtResource( 18 )
expand_icon = true

[node name="chibsLBL" type="Label" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 630.0
margin_right = 1024.0
margin_bottom = 674.0
custom_fonts/font = ExtResource( 26 )
text = "Chibs"
align = 1

[node name="basic" type="Button" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 678.0
margin_right = 1024.0
margin_bottom = 728.0
custom_fonts/font = ExtResource( 26 )
text = "Buy a basic chib - 60 coins"
icon = ExtResource( 25 )
expand_icon = true

[node name="super" type="Button" parent="UI/shopPopUP/ScrollContainer/VBoxContainer"]
margin_top = 732.0
margin_right = 1024.0
margin_bottom = 782.0
custom_fonts/font = ExtResource( 26 )
text = "Super chib - 150 coins"
icon = ExtResource( 25 )
expand_icon = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Switch" to="." method="_on_Switch_body_entered"]
[connection signal="coin_collected" from="Coin" to="UI/HUD" method="_on_Coin_collected"]
[connection signal="coin_collected" from="Coin2" to="UI/HUD" method="_on_Coin_collected"]
[connection signal="coin_collected" from="Coin3" to="UI/HUD" method="_on_Coin_collected"]
[connection signal="use_move_vector" from="CanvasLayer" to="Player" method="_on_CanvasLayer_use_move_vector"]
[connection signal="pressed" from="UI/Settingspopup/VBoxContainer/backButton" to="UI/Settingspopup/VBoxContainer/backButton" method="_on_backButton_pressed"]
[connection signal="pressed" from="UI/Settingspopup/VBoxContainer/quitButton" to="UI/Settingspopup/VBoxContainer/quitButton" method="_on_quitButton_pressed"]
[connection signal="pressed" from="UI/shopBTN" to="." method="_on_shopBTN_pressed"]
[connection signal="pressed" from="UI/settingsBTN" to="." method="_on_settingsBTN_pressed"]
[connection signal="pressed" from="UI/EndPopUp/VBoxContainer/backButton" to="UI/EndPopUp/VBoxContainer/backButton" method="_on_backButton_pressed"]
[connection signal="pressed" from="UI/EndPopUp/VBoxContainer/quitButton" to="UI/EndPopUp/VBoxContainer/quitButton" method="_on_quitButton_pressed"]
